--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
 
             }
             
-            #list{
-                font-size: 1.5em;
+            ul li {
+                font-size: 1.1em;
+                font-height: 1.5em;
             }
 
             #page2{
@@ -78,7 +79,7 @@
                     </h3>
                 </div>
                 <div id="middle">
-                    <p id="list"><ul>
+                    <p class="list"><ul>
                         <li>Lovebirds</li>
                         <li>Cockatiels</li>
                         <li>Conures</li>
